@@ -30,6 +30,7 @@ virtualbox (4.0.8-dfsg-1) UNRELEASED; urgency=low
     - Add transitional packages.
   * Compress orig tarball with bzip2.
   * Drop support for building on lenny.
+  * Update 28-no-selinux-fedora.patch to new upstream version.
 
  -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 22 Apr 2011 11:31:53 +0200
 
